cambio tests para adaptar a readDocument, falta algun test